--- a/app/src/main/res/layout/fragment_cai_dat_co_ban.xml
+++ b/app/src/main/res/layout/fragment_cai_dat_co_ban.xml
@@ -4,12 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.OtherFragment">
+    tools:context=".ui.CaiDatCoBanFragment">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Khác"
+        android:text="Cài đặt cơ bản"
         android:textSize="25dp"
         android:padding="15dp"
         android:background="@color/grey"
@@ -18,7 +18,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/otherRecyclerView"
+        android:id="@+id/caiDatCoBanRCV"
         />
 
 </LinearLayout>
+
